chore: update gradient

--- a/packages/hero/src/scss/_hero.scss
+++ b/packages/hero/src/scss/_hero.scss
@@ -120,7 +120,7 @@
     background: core.$white;
 
     &::after {
-      background: var(--brand-purple-gradient);
+      background: core.$purple-gradient;
     }
   }
 
