--- a/packages/navigation/src/scss/_custom-properties.scss
+++ b/packages/navigation/src/scss/_custom-properties.scss
@@ -2,12 +2,8 @@
 @use "global" as *;
 
 :root {
-  // @todo replace this once the new layout package is in.
-  --local-nav-max-width: 261px;
-
-  // @todo replace these with colour vars once the new colour work is in.
-  --local-nav-border: #dcdcdd;
-  --local-nav-grandparent-border: #3b383e;
-  --local-nav-active-background: #f3f3f4;
-  --local-nav-focus: #0d6dcd;
+  --local-nav-border: #{core.$grey-200};
+  --local-nav-grandparent-border: #{core.$grey-900};
+  --local-nav-active-background: #{core.$grey-50};
+  --local-nav-focus: #{core.$utility-500};
 }
