--- a/packages/navigation/src/scss/_local-nav.scss
+++ b/packages/navigation/src/scss/_local-nav.scss
@@ -17,66 +17,23 @@
 
 .uq-local-nav {
   max-width: var(--sidebar-layout-sidebar-width);
-
-  & ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
 }
 
-.uq-local-nav__menu-item {
-  margin: 0;
+.uq-local-nav__link {
+  display: block;
+  color: core.$black;
+  padding-block: core.$space-m;
+  padding-inline-start: core.$space-xl;
+  border-bottom: 1px solid var(--local-nav-border);
 
-  & a {
-    display: block;
-    color: core.$black;
-    padding-block: core.$space-m;
-    padding-inline-start: core.$space-xl;
-    border-bottom: 1px solid var(--local-nav-border);
-
-    &:hover {
-      text-decoration: none;
-      background-color: var(--local-nav-active-background);
-    }
-
-    &:focus-visible {
-      outline: 4px solid var(--local-nav-focus);
-      outline-offset: -3px;
-    }
-  }
-}
-
-.uq-local-nav--is-current {
-  border-left: 4px solid core.$purple-500;
-  margin-top: -1px;
-
-  & > a {
-    border-top: 1px solid var(--local-nav-border);
-  }
-
-  &.uq-local-nav__menu-item > a {
-    padding-inline: calc(#{core.$space-xl} - 4px) 0;
-  }
-}
-
-.uq-local-nav--is-active {
-  & > a {
+  &:hover {
+    text-decoration: none;
     background-color: var(--local-nav-active-background);
-    font-weight: core.$font-weight-medium;
   }
-}
 
-.uq-local-nav--has-children {
-  & > a {
-    background-image: url(icon.get-icon(
-      "standard--chevron-down-sml",
-      core.$black
-    ));
-    background-repeat: no-repeat;
-    background-size: 24px;
-    background-position: right center;
-    padding-inline-end: core.$space-l;
+  &:focus-visible {
+    outline: 4px solid var(--local-nav-focus);
+    outline-offset: -3px;
   }
 }
 
@@ -84,7 +41,7 @@
 .uq-local-nav__parent {
   font-weight: core.$font-weight-medium;
 
-  & a {
+  & .uq-local-nav__link {
     background-image: url(icon.get-icon(
       "standard--chevron-left",
       core.$purple-500
@@ -96,13 +53,53 @@
 }
 
 .uq-local-nav__grandparent {
-  & a {
+  & .uq-local-nav__link {
     border-color: var(--local-nav-grandparent-border);
   }
 }
 
-.uq-local-nav__child {
-  & a {
+.uq-local-nav__children,
+.uq-local-nav__grandchildren {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.uq-local-nav--has-children {
+  & > .uq-local-nav__link {
+    background-image: url(icon.get-icon(
+      "standard--chevron-down-sml",
+      core.$black
+    ));
+    background-repeat: no-repeat;
+    background-size: 24px;
+    background-position: right center;
+    padding-inline-end: core.$space-l;
+  }
+}
+
+.uq-local-nav__child,
+.uq-local-nav__grandchild {
+  margin-bottom: 0;
+}
+
+.uq-local-nav__grandchild {
+  & .uq-local-nav__link {
     padding-inline: core.$space-xxl;
   }
+}
+
+.uq-local-nav--current-child {
+  border-left: 4px solid core.$purple-500;
+  margin-top: -1px;
+
+  & > .uq-local-nav__link {
+    border-top: 1px solid var(--local-nav-border);
+    padding-inline: calc(#{core.$space-xl} - 4px) 0;
+  }
+}
+
+.uq-local-nav--active-link {
+  background-color: var(--local-nav-active-background);
+  font-weight: core.$font-weight-medium;
 }
