test colour blue

--- a/packages/core/src/scss/_partials/_colour-constants.scss
+++ b/packages/core/src/scss/_partials/_colour-constants.scss
@@ -13,7 +13,7 @@ $purple-100: #dcd3e4;
 $purple-200: #b9a7ca;
 $purple-300: #977caf;
 $purple-400: #745095;
-$purple-500: red;
+$purple-500: blue;
 $purple-600: #010101;
 $purple-650: #40205d;
 $purple-700: #3a1f53;
