fix: prefix layout custom property names

--- a/packages/layout/src/scss/_container.scss
+++ b/packages/layout/src/scss/_container.scss
@@ -1,6 +1,6 @@
 .uq-container {
   width: 100%;
-  max-width: var(--container-max-width);
+  max-width: var(--layout-container-max-width);
   padding-left: var(--layout-gap);
   padding-right: var(--layout-gap);
   margin-left: auto;
