--- a/packages/navigation/src/scss/_local-nav.scss
+++ b/packages/navigation/src/scss/_local-nav.scss
@@ -3,7 +3,7 @@
 @use "global" as *;
 
 .uq-local-nav {
-  max-width: var(--sidebar-layout-sidebar-width);
+  max-width: var(--layout-sidebar-width);
 }
 
 .uq-local-nav__link {
