--- a/packages/layout/src/scss/_custom-properties.scss
+++ b/packages/layout/src/scss/_custom-properties.scss
@@ -2,17 +2,17 @@
 @use "global" as *;
 
 :root {
-  --container-max-width: #{$container-max-width};
+  --layout-container-max-width: #{$container-max-width};
   --layout-gap: #{core.$space-xl};
-  --section-gap: 6rem;
+  --layout-section-gap: 6rem;
 
-  --sidebar-layout-sidebar-width: 261px;
+  --layout-sidebar-width: 261px;
 }
 
 // Resize custom properties for tablet/mobile.
 @media #{core.$screen-lg-down} {
   :root {
     --layout-gap: #{core.$space-l};
-    --section-gap: #{core.$space-uul};
+    --layout-section-gap: #{core.$space-uul};
   }
 }
