--- a/packages/layout/src/scss/_sections.scss
+++ b/packages/layout/src/scss/_sections.scss
@@ -1,11 +1,11 @@
 .uq-sections {
   display: flex;
   flex-direction: column;
-  gap: var(--section-gap);
+  gap: var(--layout-section-gap);
 }
 
 .uq-sections + .uq-footer {
-  margin-top: var(--section-gap);
+  margin-top: var(--layout-section-gap);
 }
 
 .uq-sections:has(.uq-section--shaded:last-child) + .uq-footer {
