--- a/packages/layout/src/scss/_sidebar-layout.scss
+++ b/packages/layout/src/scss/_sidebar-layout.scss
@@ -3,13 +3,13 @@
 .uq-sidebar-layout {
   display: flex;
   flex-direction: column;
-  gap: var(--section-gap);
+  gap: var(--layout-section-gap);
 
   @media #{core.$screen-lg-up} {
     display: grid;
     gap: 0;
     grid-template-columns:
-      var(--sidebar-layout-sidebar-width) minmax(32px, 80px)
+      var(--layout-sidebar-width) minmax(32px, 80px)
       minmax(667px, 1fr);
   }
 }
