fix: correct hero-basic text size and line-length

--- a/packages/hero/src/scss/_custom-properties.scss
+++ b/packages/hero/src/scss/_custom-properties.scss
@@ -14,6 +14,8 @@
   --hero-large-min-height: 500px;
 
   --hero-image-max-width: 790px;
+
+  --hero-title-max-line-length: 518px;
 }
 
 // Resize custom properties for tablet/mobile.
