--- a/packages/hero/src/scss/_hero-basic.scss
+++ b/packages/hero/src/scss/_hero-basic.scss
@@ -45,9 +45,10 @@
 }
 
 .uq-hero-basic__title {
-  font-size: var(--font-size-ul);
+  font-size: var(--hero-font-size-xxxxl);
   color: core.$white;
   margin: 0;
+  max-width: var(--hero-title-max-line-length);
 }
 
 .uq-hero-basic__back {
