--- a/packages/navigation/src/scss/_local-nav.scss
+++ b/packages/navigation/src/scss/_local-nav.scss
@@ -3,7 +3,7 @@
 @use "global" as *;
 
 .uq-local-nav {
-  max-width: var(--sidebar-layout-sidebar-width);
+  max-width: var(--layout-sidebar-width);
 }
 
 .uq-local-nav__link {
@@ -80,7 +80,7 @@
 }
 
 .uq-local-nav--has-children {
-  & .uq-local-nav__link {
+  & > .uq-local-nav__link {
     background-image: url(icon.get-icon(
       "standard--chevron-down-sml",
       core.$black
@@ -91,7 +91,7 @@
     padding-inline-end: core.$space-l;
   }
 
-  & .uq-local-nav--active-link {
+  & > .uq-local-nav--active-link {
     background-image: none;
   }
 }
