--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -2,98 +2,81 @@
 @use "@uqds/icon/src/scss/global" as icon;
 @import "global";
 
-// Breadcrumb
-.uq-breadcrumb {
-  // Breadcrumb item
-  &__list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.uq-breadcrumbs {
+  border-bottom: 1px solid #e2e2e2;
+  padding: 12px 0;
+}
+
+.uq-breadcrumb__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  grid-gap: 2px 0;
+}
+
+.uq-breadcrumb__item {
+  background-image: url(icon.get-icon(
+          "standard--chevron-left-sml",
+          core.$grey-700
+  ));
+  background-position: left 0.2rem center;
+  padding: 0 0 0 1.5rem;
+  margin: 0;
+  font-size: core.$font-size-s;
+  color: core.$grey-700;
+  background-repeat: no-repeat;
+  background-size: 1rem;
+  display: none;
+  min-width: 0; // overflow hidden fix for flexbox
+
+  &:nth-last-child(2) {
     display: flex;
-    flex-wrap: wrap;
-    grid-gap: 2px 0;
   }
 
-  // Breadcrumb item
-  &__item {
+  @media #{core.$screen-md-up} {
+    display: flex;
+    min-width: auto;
     background-image: url(icon.get-icon(
-      "standard--chevron-left-sml",
-      core.$grey-700
+            "standard--chevron-right-sml",
+            core.$grey-700
     ));
-    background-position: left 0.2rem center;
-    padding: 0 0 0 1.5rem;
-    margin: 0;
-    font-size: core.$font-size-s;
-    color: core.$grey-700;
-    background-repeat: no-repeat;
-    background-size: 1rem;
-    display: none;
-    min-width: 0; // overflow hidden fix for flexbox
 
-    &:nth-last-child(2) {
-      display: flex;
+    &:first-of-type {
+      background: none;
+      padding-left: 0;
     }
 
-    @media #{core.$screen-md-up} {
-      display: flex;
-      min-width: auto;
-      background-image: url(icon.get-icon(
-        "standard--chevron-right-sml",
-        core.$grey-700
-      ));
-
-      &:first-of-type {
-        background: none;
-        padding-left: 0;
+    &:last-of-type {
+      .uq-breadcrumb__link {
+        max-width: none;
       }
-
-      &:last-of-type {
-        .uq-breadcrumb__link {
-          max-width: none;
-        }
-      }
-    }
-
-    &--hidden {
-      display: none;
-    }
-  }
-
-  &__expand {
-    cursor: pointer;
-  }
-
-  // Breadcrumb link
-  &__link {
-    text-decoration: underline;
-    color: core.$grey-700;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: none;
-
-    @media #{core.$screen-md-up} {
-      max-width: 9rem;
-    }
-
-    &:hover {
-      color: core.$grey-700;
-    }
-  }
-
-  &__container {
-    border-bottom: 1px solid core.$grey-200;
-
-    & .uq-breadcrumb {
-      padding: 1rem;
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 73.25rem;
     }
   }
 }
 
-.uq-breadcrumbs {
-  border-bottom: 1px solid #e2e2e2;
-  padding: core.$space-m 0;
+.uq-breadcrumb__item--hidden {
+  display: none;
+}
+
+.uq-breadcrumb__expand {
+  cursor: pointer;
+}
+
+.uq-breadcrumb__link {
+  text-decoration: underline;
+  color: core.$grey-700;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: none;
+
+  @media #{core.$screen-md-up} {
+    max-width: 9rem;
+  }
+
+  &:hover {
+    color: core.$grey-700;
+  }
 }
