fix: update line height and padding rules from cx feedback

--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -13,8 +13,8 @@
   font-family: core.$roboto;
   font-size: core.$font-size-m;
   font-weight: core.$font-weight-medium;
-  line-height: core.$line-height;
-  padding: core.$space-s core.$space-l;
+  line-height: core.$line-height-ui;
+  padding: core.$space-m core.$space-l;
   position: relative;
   text-align: center;
   text-decoration: none;
