fix: font-weight on hover. update transition rules to exlucde font-weight change

--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -18,7 +18,7 @@
   position: relative;
   text-align: center;
   text-decoration: none;
-  transition: all 300ms ease-out;
+  transition: background-color 300ms ease-out, color 300ms ease-out, border 300ms ease-out;
 
   *,
   *::before,
@@ -31,6 +31,7 @@
     border-color: core.$purple-500;
     color: core.$purple-500;
     text-decoration: underline;
+    font-weight: core.$font-weight-normal;
   }
 
   // TODO: UPDATE FOCUS STYLES
