--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -18,7 +18,8 @@
   position: relative;
   text-align: center;
   text-decoration: none;
-  transition: background-color 300ms ease-out, color 300ms ease-out, border 300ms ease-out;
+  transition: background-color 300ms ease-out, color 300ms ease-out,
+    border 300ms ease-out;
 
   *,
   *::before,
