fix: update heading color to grey--900

--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -61,7 +61,7 @@ $use-encapsulation: false !default;
   h6 {
     font-weight: core.$font-weight-bold;
     line-height: core.$line-height-h;
-    color: core.$purple-500;
+    color: core.$grey-900;
   }
 
   h1 {
