--- a/packages/grid-menu/src/scss/_component.scss
+++ b/packages/grid-menu/src/scss/_component.scss
@@ -117,7 +117,7 @@
   // Dark text variant.
   &--dark-text {
     .uq-grid-menu__link {
-      color: core.$text;
+      color: core.$grey-900;
     }
 
     .uq-grid-menu__icon {
