--- a/packages/header-legacy/src/scss/_component.scss
+++ b/packages/header-legacy/src/scss/_component.scss
@@ -305,7 +305,7 @@
         font-family: sans-serif;
         font-size: core.$font-size-m;
         line-height: 1;
-        color: core.$text;
+        color: core.$grey-900;
         height: auto;
         outline: none;
 
