--- a/packages/site-header/src/scss/_component.scss
+++ b/packages/site-header/src/scss/_component.scss
@@ -4,7 +4,7 @@
 @use "global" as *;
 
 .uq-site-header {
-  color: core.$text;
+  color: core.$grey-900;
   box-sizing: border-box;
   font-family: core.$font-body;
   font-size: core.$font-size-m;
