--- a/packages/storybook-html/.storybook/custom/components/StatusBadge.scss
+++ b/packages/storybook-html/.storybook/custom/components/StatusBadge.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   border-radius: 9999px;
   border: 2px solid transparent;
-  color: core.$text;
+  color: core.$grey-900;
   cursor: help;
   display: inline-block;
   font-size: core.$font-size-s;
