--- a/packages/storybook-html/stories/components/core/_colour.scss
+++ b/packages/storybook-html/stories/components/core/_colour.scss
@@ -406,11 +406,11 @@
 
 /* Text */
 .uqds-text-bgcolor {
-  background-color: core.$text;
+  background-color: core.$grey-900;
 }
 
 .uqds-text-color {
-  color: core.$text;
+  color: core.$grey-900;
 }
 
 /* Alerts */
