--- a/packages/card/src/scss/_component.scss
+++ b/packages/card/src/scss/_component.scss
@@ -14,7 +14,7 @@
   background-color: core.$white;
   border: 1px solid core.$grey-200;
   border-radius: core.$space-xs;
-  color: core.$text;
+  color: core.$grey-900;
   line-height: core.$space-l;
   overflow-wrap: break-word;
   word-wrap: break-word;
