--- a/packages/table/src/scss/_global.scss
+++ b/packages/table/src/scss/_global.scss
@@ -71,7 +71,7 @@
   font-size: core.$font-size-m;
   font-weight: core.$font-weight-normal;
   line-height: core.$line-height;
-  color: core.$text;
+  color: core.$grey-900;
   list-style: none;
 
   *,
