--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -45,7 +45,7 @@ $use-encapsulation: false !default;
   }
 
   .link {
-    background-color: core.$link;
+    background-color: core.$utility-500;
   }
 
   .purple {
