--- a/packages/pagination/src/scss/_component.scss
+++ b/packages/pagination/src/scss/_component.scss
@@ -14,7 +14,7 @@
     list-style: none;
 
     .uq-pagination__link {
-      color: core.$link;
+      color: core.$utility-500;
       font-size: 1rem;
       font-weight: 300;
       padding: core.$space-none core.$space-s;
