--- a/packages/previous-next/src/scss/_component.scss
+++ b/packages/previous-next/src/scss/_component.scss
@@ -31,7 +31,7 @@
   }
 
   a {
-    color: core.$link;
+    color: core.$utility-500;
     font-size: 1.7rem;
     font-weight: 400;
     line-height: 1.2;
