--- a/packages/storybook-html/.storybook/custom/components/Toc.scss
+++ b/packages/storybook-html/.storybook/custom/components/Toc.scss
@@ -21,7 +21,7 @@
     }
 
     a.toc-link {
-      color: core.$link;
+      color: core.$utility-500;
       text-indent: -(core.$space-m);
 
       &::before {
