--- a/packages/form/src/scss/_component.scss
+++ b/packages/form/src/scss/_component.scss
@@ -174,8 +174,8 @@ $use-encapsulation: false !default;
     margin-bottom: core.$space-l;
 
     &:focus {
-      border-color: core.$link;
-      box-shadow: 0 0 0 1px core.$link inset;
+      border-color: core.$utility-500;
+      box-shadow: 0 0 0 1px core.$utility-500 inset;
       outline: none;
     }
 
@@ -199,8 +199,8 @@ $use-encapsulation: false !default;
       border-radius: $form-border-radius;
 
       &:focus {
-        border-color: core.$link;
-        box-shadow: 0 2px 0 0 core.$link, 0 0 0 1px core.$link inset;
+        border-color: core.$utility-500;
+        box-shadow: 0 2px 0 0 core.$utility-500, 0 0 0 1px core.$utility-500 inset;
       }
     }
 
@@ -243,7 +243,7 @@ $use-encapsulation: false !default;
     &:focus {
       background-image: url(icon.get-icon(
         "standard--chevron-down-sml",
-        core.$link
+        core.$utility-500
       ));
     }
 
@@ -281,8 +281,8 @@ $use-encapsulation: false !default;
     position: absolute;
 
     &:focus {
-      border-color: core.$link;
-      box-shadow: 0 0 0 1px core.$link;
+      border-color: core.$utility-500;
+      box-shadow: 0 0 0 1px core.$utility-500;
       outline: none;
     }
 
@@ -300,11 +300,11 @@ $use-encapsulation: false !default;
     }
 
     &:checked {
-      border-color: core.$link;
+      border-color: core.$utility-500;
 
       &:focus {
-        border-color: core.$link;
-        box-shadow: 0 0 0 1px core.$link;
+        border-color: core.$utility-500;
+        box-shadow: 0 0 0 1px core.$utility-500;
       }
     }
 
@@ -312,16 +312,16 @@ $use-encapsulation: false !default;
       border-color: core.$error-500;
 
       &:focus {
-        border-color: core.$link;
-        box-shadow: 0 0 0 1px core.$link;
+        border-color: core.$utility-500;
+        box-shadow: 0 0 0 1px core.$utility-500;
       }
 
       &:checked {
         border-color: core.$error-500;
 
         &:focus {
-          border-color: core.$link;
-          box-shadow: 0 0 0 1px core.$link;
+          border-color: core.$utility-500;
+          box-shadow: 0 0 0 1px core.$utility-500;
         }
       }
     }
@@ -357,7 +357,7 @@ $use-encapsulation: false !default;
     }
 
     &:checked {
-      background-color: core.$link;
+      background-color: core.$utility-500;
 
       &::after {
         background-image: url(icon.get-icon("standard--check", core.$white));
@@ -380,7 +380,7 @@ $use-encapsulation: false !default;
 
       &::after {
         border-radius: 50%;
-        background-color: core.$link;
+        background-color: core.$utility-500;
         content: "";
         display: block;
         position: absolute;
