--- a/packages/pagination/src/scss/_component.scss
+++ b/packages/pagination/src/scss/_component.scss
@@ -21,7 +21,7 @@
       text-decoration: none;
 
       &:hover {
-        color: core.$link-hover;
+        color: core.$utility-600;
         text-decoration: underline;
       }
     }
