--- a/packages/previous-next/src/scss/_component.scss
+++ b/packages/previous-next/src/scss/_component.scss
@@ -38,7 +38,7 @@
     text-decoration: none;
 
     &:hover {
-      color: core.$link-hover;
+      color: core.$utility-600;
       text-decoration: none;
 
       &::before {
