--- a/packages/app-maps/src/scss/_component.scss
+++ b/packages/app-maps/src/scss/_component.scss
@@ -592,7 +592,10 @@ $-result-icon-spacing: $-icon-spacing;
 
           &:focus-within {
             &::after {
-              background-image: url(get-icon("ui--chevron-right", core.$utility-500));
+              background-image: url(get-icon(
+                "ui--chevron-right",
+                core.$utility-500
+              ));
             }
           }
 
