--- a/packages/form/src/scss/_component.scss
+++ b/packages/form/src/scss/_component.scss
@@ -200,7 +200,8 @@ $use-encapsulation: false !default;
 
       &:focus {
         border-color: core.$utility-500;
-        box-shadow: 0 2px 0 0 core.$utility-500, 0 0 0 1px core.$utility-500 inset;
+        box-shadow: 0 2px 0 0 core.$utility-500,
+          0 0 0 1px core.$utility-500 inset;
       }
     }
 
