--- a/packages/storybook-html/stories/components/form/form.scss
+++ b/packages/storybook-html/stories/components/form/form.scss
@@ -1,5 +1,7 @@
 @use "@uqds/core/src/scss/_global" as core;
-@use "@uqds/form/src/scss/_component";
+@use "@uqds/form/src/scss/_component" as *;
+@use "@uqds/table/src/scss/_component" as *;
+
 
 .uqds {
   &-table__wrapper {
