--- a/packages/storybook-html/stories/components/grid-menu/grid-menu.scss
+++ b/packages/storybook-html/stories/components/grid-menu/grid-menu.scss
@@ -1,1 +1,2 @@
-@import "@uqds/grid-menu/src/scss/_component";
+@use "@uqds/grid-menu/src/scss/_component" as *;
+@use "@uqds/icon/src/scss/_component" as *;
