--- a/packages/storybook-html/stories/components/header/header.scss
+++ b/packages/storybook-html/stories/components/header/header.scss
@@ -1,1 +1,2 @@
-@use "@uqds/header/src/scss/_component";
+@use "@uqds/header/src/scss/_component" as *;
+@use "@uqds/form/src/scss/_component" as *;
