chore: regression fixes

--- a/packages/storybook-html/stories/components/page-header/page-header.html
+++ b/packages/storybook-html/stories/components/page-header/page-header.html
@@ -14,22 +14,32 @@
     <div class="uq-grid__col uq-grid__col--6">
       <h1 class="page__title">Page title</h1>
       <!-- Breadcrumb starts -->
-      <nav aria-label="breadcrumb">
-        <ol class="uq-breadcrumb" itemscope="" itemtype="https://schema.org/BreadcrumbList">
-          <li class="uq-breadcrumb__item uq-breadcrumb__item--home" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-            <a class="uq-breadcrumb__link uq-breadcrumb__link--home" href="/">Home</a>
-            <meta itemprop="position" content="1">
-          </li>
-          <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-            <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services">Information and services</a>
-            <meta itemprop="position" content="2">
-          </li>
-          <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-            <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services/human-resources">Human resources</a>
-            <meta itemprop="position" content="3">
-          </li>
-        </ol>
-      </nav>
+      <div class="uq-breadcrumbs">
+        <div class="uq-container">
+          <nav class="uq-breadcrumb" aria-label="Breadcrumb">
+            <ol class="uq-breadcrumb__list">
+              <li class="uq-breadcrumb__item">
+                <a class="uq-breadcrumb__link" title="UQ home" href="https://uq.edu.au/">UQ home</a>
+              </li>
+              <li class="uq-breadcrumb__item">
+                <a class="uq-breadcrumb__link" title="Level one" href="/information-and-services">Level one</a>
+              </li>
+              <li class="uq-breadcrumb__item">
+                <a class="uq-breadcrumb__link" title="Level two" href="/information-and-services/internet-and-wifi">Level two</a>
+              </li>
+              <li class="uq-breadcrumb__item">
+                <a class="uq-breadcrumb__link" title="Bachelor of Business with a Major in Management or Finance" href="#">Bachelor of Business with a Major in Management or Finance</a>
+              </li>
+              <li class="uq-breadcrumb__item">
+                <a class="uq-breadcrumb__link" title="Major Leadership and Management Science" href="#">Major Leadership and Management Science</a>
+              </li>
+              <li class="uq-breadcrumb__item">
+                Current page
+              </li>
+            </ol>
+          </nav>
+        </div>
+      </div>
       <!-- Breadcrumb ends -->
     </div>
   </div>
