--- a/packages/storybook-html/stories/components/page-header/page-header.scss
+++ b/packages/storybook-html/stories/components/page-header/page-header.scss
@@ -1,1 +1,2 @@
-@import "@uqds/page-header/src/scss/_component";
+@use "@uqds/page-header/src/scss/_component" as *;
+@use "@uqds/breadcrumb/src/scss/_component" as *;
