--- a/packages/storybook-html/stories/patterns/form-validation/examples/password-reset.scss
+++ b/packages/storybook-html/stories/patterns/form-validation/examples/password-reset.scss
@@ -1,4 +1,6 @@
 @use "@uqds/core/src/scss/_global" as core;
+@use "@uqds/form/src/scss/_component" as *;
+@use "@uqds/button/src/scss/_component" as *;
 
 .story-password-strength-meter {
   box-sizing: border-box;
