--- a/packages/storybook-html/stories/components/site-header/site-header.scss
+++ b/packages/storybook-html/stories/components/site-header/site-header.scss
@@ -1,1 +1,2 @@
-@use "@uqds/site-header/src/scss/_component";
+@use "@uqds/site-header/src/scss/_component" as *;
+@use "@uqds/icon/src/scss/_component" as *;
