chore: regression updates

--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps.scss
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps.scss
@@ -1,1 +1,3 @@
-@use "@uqds/app-maps/src/scss/_component";
+@use "@uqds/app-maps/src/scss/_component" as *;
+@use "@uqds/button/src/scss/_component" as *;
+@use "@uqds/icon/src/scss/_component" as *;
