chore: updated body

--- a/packages/storybook-html/stories/components/body/body.scss
+++ b/packages/storybook-html/stories/components/body/body.scss
@@ -1,5 +1,6 @@
 @use "@uqds/core/src/scss/global" as core;
 @use "@uqds/grid/src/scss/global" as grid;
+@use "@uqds/table/src/scss/main" as *;
 // @use '@uqds/body/src/scss/_component' as body with (
 //   $use-encapsulation: true
 // );
