feat: add letter-spacing variable and apply to all text

--- a/packages/core/src/scss/_component.scss
+++ b/packages/core/src/scss/_component.scss
@@ -8,4 +8,5 @@ html {
   color: $grey-900;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  letter-spacing: $letter-spacing;
 }
