--- a/packages/core/src/scss/_partials/_text-constants.scss
+++ b/packages/core/src/scss/_partials/_text-constants.scss
@@ -27,6 +27,9 @@ $font-weight-medium: 500;
 $font-weight-bold: $font-weight-medium;
 
 // line heights
-$line-height: 1.5;
+$line-height: 1.6;
 $line-height-h: 1.2;
 $line-height-ui: 1;
+
+// letter spacing
+$letter-spacing: .01rem;
